# abstractive-text-summarization

./: .gitignore  README.md  abstractive-text-summ.ipynb  data-preparation.ipynb  environment-cpu.yml  environment.yml  launch-tensorboard_viz.ipynb  pyproject.toml  requirements.txt
.ipynb_checkpoints/: abstractive-text-summ-checkpoint.ipynb
data/sample_data/: train_ds.csv  valid_ds.csv
data/sample_data/logs/gru_bahdanau_rev_1/: events.out.tfevents.1533236808.instance-1
data/sample_data/logs/gru_luong_rev_1/: events.out.tfevents.1533243951.instance-1
data/sample_data/models/: gru_bahdanau_rev_1_model_log.json  gru_bahdanau_rev_1_train_end_model_log.json  gru_luong_rev_1_model_log.json  gru_luong_rev_1_train_end_model_log.json
data/sample_data/vocab/: itos.pk  stoi.pk
py scripts/: config.py  model.py  preprocess.py  train.py  utils.py
