[tool.poetry]
name = "abstractive-text-summarization"
version = "0.1.0"
description = ""
authors = ["swhustla <fdkelly@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastai = "^2.5.3"
tensorboard-pytorch = "^0.7.1"
jupyterlab = "^3.2.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
